--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logo-color.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Fernando Koji Yamashiro's online portfolio, it includes his Software Developer and ICT Business Analyst qualifications.">
     <title>Fernando Koji - Portfolio</title>
   </head>
   <body>
